--- a/book.toml
+++ b/book.toml
@@ -4,3 +4,6 @@ language = "en"
 multilingual = false
 src = "src"
 title = "Angular Book"
+
+[output.html]
+git-repository-url = "https://github.com/DenysVuika/angular-book"
